{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 134,
  "lineage": "b4b7ca3d-3740-bdec-6cd4-afe583cc79f0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/networkInterfaces/tolu-nic",
            "internal_domain_name_suffix": "peutb04zrkrezdhuqmntd4wuna.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/publicIPAddresses/tolu-public",
                "subnet_id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/virtualNetworks/tolu-network/subnets/tolu-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-98-D3-F6",
            "name": "tolu-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "tolu-test",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Compute/virtualMachines/tolu-vm"
          },
          "dependencies": [
            "azurerm_public_ip.mtc-puplic",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/networkSecurityGroups/tolu-sg",
            "location": "eastus",
            "name": "tolu-sg",
            "resource_group_name": "tolu-test",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "tolu-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/networkSecurityGroups/tolu-sg/securityRules/tolu-dev-rule",
            "name": "tolu-dev-rule",
            "network_security_group_name": "tolu-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "tolu-test",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc-puplic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/publicIPAddresses/tolu-public",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.172.139.4",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "tolu-public",
            "resource_group_name": "tolu-test",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/virtualNetworks/tolu-network/subnets/tolu-subnet",
            "name": "tolu-subnet",
            "resource_group_name": "tolu-test",
            "virtual_network_name": "tolu-network"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc-subnet-security-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/virtualNetworks/tolu-network/subnets/tolu-subnet",
            "network_security_group_id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/networkSecurityGroups/tolu-sg",
            "subnet_id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/virtualNetworks/tolu-network/subnets/tolu-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "eb302979-8ad9-4ca2-8cf4-831b31fad468",
            "id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/virtualNetworks/tolu-network",
            "location": "eastus",
            "name": "tolu-network",
            "resource_group_name": "tolu-test",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/virtualNetworks/tolu-network/subnets/tolu-subnet",
                "name": "tolu-subnet",
                "security_group": "/subscriptions/94ef7e0d-8a3c-4de4-86b6-d248c4da35b0/resourceGroups/tolu-test/providers/Microsoft.Network/networkSecurityGroups/tolu-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    }
  ]
}